@@ -1,3 +1,12 @@
+2007-12-17  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Mark.
+        
+        - Change the format of the output URL to be shorter, to meet IE constraints
+
+        * hosted/sunspider-driver.html:
+        * hosted/sunspider-results.html:
+
 2007-12-13  Maciej Stachowiak  <mjs@apple.com>
 
         Reviewed by Oliver.
